--- a/inc/CMakeLists.txt
+++ b/inc/CMakeLists.txt
@@ -7,6 +7,6 @@ set(TGSTK_HEADER_FILES_H
 )
 
 install(FILES ${TGSTK_HEADER_FILES_H}
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/include
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
 )
